--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,9 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="auth0URL">http://www.balticapp.fi/lukeA/authzero/</string>
+    <string name="authorization">Authorization</string>
+    <string name="bearer">"Bearer "</string>
+    <string name="acstoken">acstoken</string>
+    <string name="userUrl">http://www.balticapp.fi/lukeA/user</string>
+    <string name="loginUrl">http://www.balticapp.fi/lukeA/login</string>
 </resources>
