Added functionality to PopupMaker, fetches category ID's from the server

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="acstoken">acstoken</string>
     <string name="userUrl">http://www.balticapp.fi/lukeA/user</string>
     <string name="loginUrl">http://www.balticapp.fi/lukeA/login</string>
+    <string name="report_id_url">http://www.balticapp.fi/lukeA/report?id=</string>
 
 </resources>
