Added instructional text above the calendar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,6 @@
     <string name="category_title">Category title</string>
     <string name="category_description">Category description</string>
     <string name="button_category">Category</string>
+    <string name="show_submissions_newer_than">Show submissions newer than</string>
 
 </resources>
